--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ redis==6.4.0
 requests==2.32.5
 six==1.17.0
 sqlparse==0.5.3
+stripe==13.0.1
 typing_extensions==4.15.0
 urllib3==2.5.0
 whitenoise==6.11.0
