--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+anyio==4.12.1
 asgiref==3.9.1
 async-timeout==5.0.1
 attrs==25.4.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
+click==8.3.1
 dj-database-url==3.0.1
 Django==5.2.6
 django-cors-headers==4.9.0
@@ -13,6 +15,8 @@ djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-spectacular==0.29.0
 gunicorn==23.0.0
+h11==0.16.0
+httptools==0.7.1
 idna==3.10
 inflection==0.5.1
 jsonschema==4.25.1
@@ -23,6 +27,7 @@ pillow==11.3.0
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 PyYAML==6.0.3
 redis==6.4.0
 referencing==0.37.0
@@ -34,4 +39,8 @@ stripe==13.0.1
 typing_extensions==4.15.0
 uritemplate==4.2.0
 urllib3==2.5.0
+uvicorn==0.41.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==16.0
 whitenoise==6.11.0
